force-app/main/default/objects/Risk_Management_Retention_c__x/Risk_Management_Retention_c__x.object-meta.xml
<CustomObject>
    <description>Read / Write Replication of TC Risk Object</description>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>Risk_Management_Retention__c</externalName>
    <label>TC Risks</label>
    <pluralLabel>TC Risks</pluralLabel>
</CustomObject>