force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Account_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_c__c</fullName>
    <externalDeveloperName>Account_Name__c</externalDeveloperName>
    <inlineHelpText>Account Name.</inlineHelpText>
    <label>Account Name</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>TC Risks</relationshipLabel>
    <relationshipName>TC_Risks1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>