force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Account_Region_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_c__c</fullName>
    <externalDeveloperName>Account_Region__c</externalDeveloperName>
    <inlineHelpText>Region* from account</inlineHelpText>
    <label>Account Region</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>