force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Account_Segmentation_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Segmentation_c__c</fullName>
    <externalDeveloperName>Account_Segmentation__c</externalDeveloperName>
    <label>Account Segmentation</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>