force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Acct_Mgr_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Acct_Mgr_Email_c__c</fullName>
    <externalDeveloperName>Acct_Mgr_Email__c</externalDeveloperName>
    <inlineHelpText>Email address of Account Manager from related Account</inlineHelpText>
    <label>Acct Mgr Email</label>
    <type>Email</type>
</CustomField>