force-app/main/default/objects/Risk_Management_Retention_c__x/fields/ADR360_Alert_c__c.field-meta.xml
<CustomField>
    <fullName>ADR360_Alert_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ADR360_Alert__c</externalDeveloperName>
    <inlineHelpText>Is client receiving ADR360 email Alerts?</inlineHelpText>
    <label>ADR360 Alert</label>
    <type>Checkbox</type>
</CustomField>