force-app/main/default/objects/Risk_Management_Retention_c__x/fields/AM_Actions_c__c.field-meta.xml
<CustomField>
    <fullName>AM_Actions_c__c</fullName>
    <externalDeveloperName>AM_Actions__c</externalDeveloperName>
    <label>AM Actions</label>
    <length>18</length>
    <type>Text</type>
</CustomField>