force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Assigned_To_c__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_c__c</fullName>
    <externalDeveloperName>Assigned_To__c</externalDeveloperName>
    <inlineHelpText>Risk Management &amp; Retention Owner.</inlineHelpText>
    <label>Assigned To</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>TC Risks</relationshipLabel>
    <relationshipName>TC_Risks1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>