force-app/main/default/objects/Risk_Management_Retention_c__x/fields/At_Risk_Property_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Property_Contact_c__c</fullName>
    <externalDeveloperName>At_Risk_Property_Contact__c</externalDeveloperName>
    <inlineHelpText>What is the Property Contact?</inlineHelpText>
    <label>Property Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>