force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Client_response_after_Risk_intervention__c.field-meta.xml
<CustomField>
    <fullName>Client_response_after_Risk_intervention__c</fullName>
    <externalDeveloperName>Client_response_after_Risk_intervention__c</externalDeveloperName>
    <inlineHelpText>After Risk intervention, what has been the client response?</inlineHelpText>
    <label>Client response after Risk intervention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>