force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Comments_c__c</fullName>
    <externalDeveloperName>Comments__c</externalDeveloperName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>