force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Created_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_c__c</fullName>
    <externalDeveloperName>Created_Date__c</externalDeveloperName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>