force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Fulfillment_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status_c__c</fullName>
    <externalDeveloperName>Fulfillment_Status__c</externalDeveloperName>
    <inlineHelpText>What is the Fulfillment status?</inlineHelpText>
    <label>Fulfillment Status</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>