force-app/main/default/objects/Risk_Management_Retention_c__x/fields/In_Progress_Date_c__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Date_c__c</fullName>
    <externalDeveloperName>In_Progress_Date__c</externalDeveloperName>
    <inlineHelpText>Date the RM&amp;M is moved to In Progress.</inlineHelpText>
    <label>In Progress Date</label>
    <type>DateTime</type>
</CustomField>