force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Last_Modified_Date_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time_c__c</fullName>
    <externalDeveloperName>Last_Modified_Date_Time__c</externalDeveloperName>
    <inlineHelpText>When has this record been lately changed?</inlineHelpText>
    <label>Last Modified Date/Time</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>