force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Non_Usage_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Non_Usage_Reason_c__c</fullName>
    <externalDeveloperName>Non_Usage_Reason__c</externalDeveloperName>
    <label>Non-Usage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROI Not Realized</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Product Adoption</fullName>
            </value>
            <value>
                <fullName>Poor ROI</fullName>
            </value>
            <value>
                <fullName>Dissatisfied with TC Support</fullName>
            </value>
            <value>
                <fullName>Missing/incompatible functionality</fullName>
            </value>
            <value>
                <fullName>Change of Control</fullName>
            </value>
            <value>
                <fullName>Change in Behavior</fullName>
            </value>
            <value>
                <fullName>Customer looking at alternative solns</fullName>
            </value>
            <value>
                <fullName>TravelClick Value Decline</fullName>
            </value>
            <value>
                <fullName>Termination notice</fullName>
            </value>
            <value>
                <fullName>Non-renewal of product</fullName>
            </value>
            <value>
                <fullName>Customer Support - Usage</fullName>
            </value>
            <value>
                <fullName>Customer using the tool</fullName>
            </value>
            <value>
                <fullName>Client Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>