force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Opportunity_at_Risk_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_at_Risk_c__c</fullName>
    <externalDeveloperName>Opportunity_at_Risk__c</externalDeveloperName>
    <inlineHelpText>Opportunity at Risk.</inlineHelpText>
    <label>Opportunity at Risk</label>
    <length>100</length>
    <referenceTo>Risk_Management_Retention_c__x</referenceTo>
    <relationshipLabel>TC Risks</relationshipLabel>
    <relationshipName>TC_Risks2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>