force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Opportunity_Stage_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_c__c</fullName>
    <externalDeveloperName>Opportunity_Stage__c</externalDeveloperName>
    <label>Opportunity Stage</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>