force-app/main/default/objects/Risk_Management_Retention_c__x/fields/OPTY_End_Date_c__c.field-meta.xml
<CustomField>
    <fullName>OPTY_End_Date_c__c</fullName>
    <externalDeveloperName>OPTY_End_Date__c</externalDeveloperName>
    <inlineHelpText>End date of OPTY at risk.</inlineHelpText>
    <label>OPTY End Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>