force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Opty_Owner_RVP_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Opty_Owner_RVP_Email_c__c</fullName>
    <externalDeveloperName>Opty_Owner_RVP_Email__c</externalDeveloperName>
    <label>Opty Owner RVP Email</label>
    <type>Email</type>
</CustomField>