force-app/main/default/objects/Risk_Management_Retention_c__x/fields/OPTY_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>OPTY_Start_Date_c__c</fullName>
    <externalDeveloperName>OPTY_Start_Date__c</externalDeveloperName>
    <inlineHelpText>Start Date from OPTY at Risk.</inlineHelpText>
    <label>OPTY Start Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>