force-app/main/default/objects/Risk_Management_Retention_c__x/fields/OPTY_Valuation_c__c.field-meta.xml
<CustomField>
    <fullName>OPTY_Valuation_c__c</fullName>
    <externalDeveloperName>OPTY_Valuation__c</externalDeveloperName>
    <inlineHelpText>P2G value of the OPTY if it has a credit date in the last 12 months.</inlineHelpText>
    <label>OPTY Valuation</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>