force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Outcome_c__c.field-meta.xml
<CustomField>
    <fullName>Outcome_c__c</fullName>
    <externalDeveloperName>Outcome__c</externalDeveloperName>
    <inlineHelpText>What was the outcome of the intervention?</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Client in a steady place</fullName>
            </value>
            <value>
                <fullName>Adjustment in Product/settings meeting client needs</fullName>
            </value>
            <value>
                <fullName>Adjustment in Product/settings not meeting client needs</fullName>
            </value>
            <value>
                <fullName>Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>Training resolved client risk</fullName>
            </value>
            <value>
                <fullName>Training did not resolve client risk</fullName>
            </value>
            <value>
                <fullName>Pricing/Terms meeting expectations</fullName>
            </value>
            <value>
                <fullName>Pricing/Terms not meeting expectations</fullName>
            </value>
            <value>
                <fullName>Information provided did not resolve Risk</fullName>
            </value>
            <value>
                <fullName>Information provided resolved Risk</fullName>
            </value>
            <value>
                <fullName>Added to TC Roadmap</fullName>
            </value>
            <value>
                <fullName>Not Added to TC Roadmap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>