force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Product_at_Risk_c__c.field-meta.xml
<CustomField>
    <fullName>Product_at_Risk_c__c</fullName>
    <externalDeveloperName>Product_at_Risk__c</externalDeveloperName>
    <inlineHelpText>Product at Risk.</inlineHelpText>
    <label>Product at Risk</label>
    <length>18</length>
    <type>Text</type>
</CustomField>