force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Product_Family_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_c__c</fullName>
    <externalDeveloperName>Product_Family__c</externalDeveloperName>
    <label>Product Family x</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Guest Management</fullName>
            </value>
            <value>
                <fullName>Media Solutions</fullName>
            </value>
            <value>
                <fullName>Reservation Solutions</fullName>
            </value>
            <value>
                <fullName>Web Solutions</fullName>
            </value>
            <value>
                <fullName>Video Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>