force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Product_Name_2_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_2_c__c</fullName>
    <externalDeveloperName>Product_Name_2__c</externalDeveloperName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency360</fullName>
            </value>
            <value>
                <fullName>Agency360 GDS Advertising Edition</fullName>
            </value>
            <value>
                <fullName>Agency Position</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
            <value>
                <fullName>Basic Bundle</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Guest Management Solutions - Add-ons</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Guest Management Solutions - Guest Recognition</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Guest Management Solutions - Marketing Automation &amp; Customer Ana</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Guest Management Solutions - Transactional Communications</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Media - Travelport Featured Property - Galileo/Apollo</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Media - Travelport Featured Property - Worldspan</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Video</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Video Distribution</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Video Media Pack</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Video Options</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Video Photos</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Video Services</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Web - Mobile Site Add-Ons</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Web - Select Pro Package</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Web - SEO Add-Ons</fullName>
            </value>
            <value>
                <fullName>Basic Bundle - Web - SMO Add-Ons</fullName>
            </value>
            <value>
                <fullName>Bundled Agency360</fullName>
            </value>
            <value>
                <fullName>Bundled Demand360</fullName>
            </value>
            <value>
                <fullName>Bundled Guestview</fullName>
                <label>Bundled Guest Management Solutions</label>
            </value>
            <value>
                <fullName>Bundled iHotelier</fullName>
            </value>
            <value>
                <fullName>Bundled Rate360</fullName>
            </value>
            <value>
                <fullName>Bundled Single Media Subscription</fullName>
            </value>
            <value>
                <fullName>Bundled Spotlight</fullName>
            </value>
            <value>
                <fullName>Bundled TVS</fullName>
            </value>
            <value>
                <fullName>Bundled Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>