force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Property_Contact_5_c__c.field-meta.xml
<CustomField>
    <fullName>Property_Contact_5_c__c</fullName>
    <externalDeveloperName>Property_Contact_5__c</externalDeveloperName>
    <label>Property Contact 5</label>
    <length>18</length>
    <type>Text</type>
</CustomField>