force-app/main/default/objects/Risk_Management_Retention_c__x/fields/R360_Notify_c__c.field-meta.xml
<CustomField>
    <fullName>R360_Notify_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>R360_Notify__c</externalDeveloperName>
    <inlineHelpText>Is client receiving R360 email alerts?</inlineHelpText>
    <label>R360 Notify</label>
    <type>Checkbox</type>
</CustomField>