force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Rally_Risk_Retention_c__c.field-meta.xml
<CustomField>
    <fullName>Rally_Risk_Retention_c__c</fullName>
    <externalDeveloperName>Rally_Risk_Retention__c</externalDeveloperName>
    <label>Rally Risk Retention</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>