force-app/main/default/objects/Risk_Management_Retention_c__x/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <externalDeveloperName>RecordTypeId</externalDeveloperName>
    <label>Record Type ID</label>
    <length>18</length>
    <referenceTo>Risk_Management_Retention_c__x</referenceTo>
    <relationshipLabel>TC Risks</relationshipLabel>
    <relationshipName>TC_Risks</relationshipName>
    <type>ExternalLookup</type>
</CustomField>