force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Renewal_Owner_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Owner_c__c</fullName>
    <externalDeveloperName>Renewal_Owner__c</externalDeveloperName>
    <inlineHelpText>Renewal Owner listed on the Opportunity.</inlineHelpText>
    <label>Renewal Owner</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>