force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Renewal_Owner_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Owner_Email_c__c</fullName>
    <externalDeveloperName>Renewal_Owner_Email__c</externalDeveloperName>
    <label>Renewal Owner Email</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>