force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Risk_Level_c__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level_c__c</fullName>
    <externalDeveloperName>Risk_Level__c</externalDeveloperName>
    <inlineHelpText>Is this a high (Immediate Action), medium (Action Required) or low (Informational) risk?</inlineHelpText>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Action Required</fullName>
            </value>
            <value>
                <fullName>Immediate Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>