force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Risk_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason_c__c</fullName>
    <externalDeveloperName>Risk_Reason__c</externalDeveloperName>
    <inlineHelpText>Reason the opportunity/product is at risk.</inlineHelpText>
    <label>Primary Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer looking at alternative solns</fullName>
                <label>Alternative Solutions</label>
            </value>
            <value>
                <fullName>Billing /Collections</fullName>
            </value>
            <value>
                <fullName>Budget Concerns</fullName>
            </value>
            <value>
                <fullName>Change in Behavior</fullName>
            </value>
            <value>
                <fullName>Significant change in local market</fullName>
                <label>Change In Local Market</label>
            </value>
            <value>
                <fullName>Change of Control  </fullName>
            </value>
            <value>
                <fullName>Contract processing delay</fullName>
                <label>Contract Processing Delay</label>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Customer Support - Feedback</fullName>
            </value>
            <value>
                <fullName>Customer unresponsive</fullName>
                <label>Customer Unresponsive</label>
            </value>
            <value>
                <fullName>Expectations incorrectly set</fullName>
                <label>Expectations Incorrectly Set</label>
            </value>
            <value>
                <fullName>Implementation prolonged</fullName>
                <label>Implementation Delayed</label>
            </value>
            <value>
                <fullName>Training  </fullName>
                <label>Lack of Training</label>
            </value>
            <value>
                <fullName>Leaving other TC Products</fullName>
            </value>
            <value>
                <fullName>Missing/incompatible functionality</fullName>
                <label>Missing/Incompatible Functionality</label>
            </value>
            <value>
                <fullName>Negative Account Management Action</fullName>
            </value>
            <value>
                <fullName>Non-renewal of product</fullName>
            </value>
            <value>
                <fullName>Poor ROI</fullName>
            </value>
            <value>
                <fullName>Product Adoption</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Product System Issue</fullName>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
            <value>
                <fullName>Termination notice</fullName>
                <label>Termination Notice/Threat</label>
            </value>
            <value>
                <fullName>TravelClick Value Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>