force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Risk_Relationship_c__c.field-meta.xml
<CustomField>
    <fullName>Risk_Relationship_c__c</fullName>
    <externalDeveloperName>Risk_Relationship__c</externalDeveloperName>
    <label>Risk Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>