force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Secondary_Risk_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Risk_Reason_c__c</fullName>
    <externalDeveloperName>Secondary_Risk_Reason__c</externalDeveloperName>
    <label>Secondary Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing /Collections</fullName>
            </value>
            <value>
                <fullName>Change in Behavior</fullName>
            </value>
            <value>
                <fullName>Change of Control</fullName>
            </value>
            <value>
                <fullName>Contract Processing Delay</fullName>
            </value>
            <value>
                <fullName>Customer looking at alternative solns</fullName>
            </value>
            <value>
                <fullName>Customer Support - Usage</fullName>
            </value>
            <value>
                <fullName>Dissatisfied with TC Support</fullName>
            </value>
            <value>
                <fullName>Expectations incorrectly set</fullName>
            </value>
            <value>
                <fullName>Implementation prolonged</fullName>
            </value>
            <value>
                <fullName>Loss of Key Sponsor</fullName>
            </value>
            <value>
                <fullName>Missing/incompatible functionality</fullName>
            </value>
            <value>
                <fullName>Non-renewal of product</fullName>
            </value>
            <value>
                <fullName>Poor ROI</fullName>
            </value>
            <value>
                <fullName>Product Adoption</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Product System Issue</fullName>
            </value>
            <value>
                <fullName>ROI not realized</fullName>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
            <value>
                <fullName>Termination notice</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>TravelClick Value Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>