force-app/main/default/objects/Risk_Management_Retention_c__x/fields/Subscription_Edition_c__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Edition_c__c</fullName>
    <externalDeveloperName>Subscription_Edition__c</externalDeveloperName>
    <inlineHelpText>What is the Edition type subscription?</inlineHelpText>
    <label>Subscription Edition</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>PROPLUS</fullName>
            </value>
            <value>
                <fullName>PROPERTY</fullName>
            </value>
            <value>
                <fullName>PREMIUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>