force-app/main/default/objects/Risk_Management_Retention_c__x/fields/TAM_intervention_c__c.field-meta.xml
<CustomField>
    <fullName>TAM_intervention_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>TAM_intervention__c</externalDeveloperName>
    <inlineHelpText>Is needed Technical Account Manager intervention?</inlineHelpText>
    <label>TAM intervention</label>
    <type>Checkbox</type>
</CustomField>